# flavor-fetcher

./: CITATION.cff  MANIFEST.in  README.md  pyproject.toml
data/: 100_2021-04-20 10_38_24.203316_3_epochs_re-run_model.json
src/: Extract Descriptors.py  datamunging.py  descriptor_model.py  makepredictions.py
src/flavorfetcher/: __init__.py  datamunging.py  descriptor_model.py  makepredictions.py
src/flavorfetcher/data/: 100_2021-04-20 10_38_24.203316_3_epochs_re-run_model.json  Example Whiskey Reviews.csv
