[build-system]
requires = ["numpy","keras","pandas",]
build-backend = "IDK WHAT GOES HERE"

[project]
name = "flavorfetcher"
version = "0.0.1"
authors = [
  { name="Leah Hamilton", email="leah.hamilton0@gmail.com" },
]
description = "A small example package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL v3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/lhami/flavor-fetcher"
"Bug Tracker" = "https://github.com/lhami/flavor-fetcher/issues"